# elio-agentapp-replit-scaffold

./: .gitattributes  .gitignore  .replit  BACKLOG.md  GETTING-STARTED.md  GUIDE.md  PRODUCT.md  README.md  SUBMISSION.md  VIBE-CODING-GUIDE.md  backlog.md  manifest.md  product.md  replit.md  replit.nix
.agents/docs/: AGENT_APP_GUIDELINES_BACK.md  AGENT_APP_GUIDELINES_FRONT.md  ARCHITECTURE.md  CONVENTIONS.md  INTEGRATION_GUIDE.md
.agents/meta-prompts/: value-office-pm.md
.github/: copilot-instructions.md
.github/prompts/: architect.prompt.md  builder.prompt.md  generate-from-google-ai-studio.prompt.md  generate-from-jira-and-ai-studio.prompt.md  generate-from-jira.prompt.md  product-manager.prompt.md  quality.prompt.md  status.prompt.md
Doc/elio coding contract/v2/back/: .env.example  pyproject.toml
Doc/elio coding contract/v2/back/agents/your_usecase/: step1_personas.py  step2_discussion.py
Doc/elio coding contract/v2/back/services/: config_llms.json  llm_config.py  process_files.py
back/: .env.example  llm_config.py  main.py  pyproject.toml  pytest.ini  registered_apps.py
back/_scaffold/: __init__.py
back/framework/: __init__.py  action_decorator.py  base_agent_app.py  models.py  registry.py  step_decorator.py  stream_safe.py
back/services/: __init__.py  config_llms.json  generate_files.py  llm_config.py  process_files.py
back/tests/: test_elio_contract.py
custom_instruction/: instructions.md
docs/: AGENT_APP_GUIDELINES_BACK.md
front/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: _build-zip.ps1  _build_patch.ps1  _build_zip.py  _inspect-zip.ps1  health.ps1  health.sh  package-agent.ps1  package.sh
value_office_prompt/: Value Office Prompt.md
(+145 files in other folders)
